# telecom_radar

./: .env.example  .gitignore  .vercelignore  CONTEXT.md  Dockerfile  PROMPT_FOR_CODEX.md  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py
app/: globals.css  layout.js  page.js
app/api/radar/: route.js
app/components/: Newsroom.js
config/: config.example.json  domains.json
docs/: VERCEL_SUPABASE_DEPLOY.md
lib/: config.js  crawler.js  notify.js  supabase.js
scripts/: install_linux.sh  run_once_windows.ps1  run_scheduled_windows.ps1  run_web_windows.ps1  telecom-radar.cron.example
supabase/: schema.sql
telecom_radar/: cli.py  config.py  content.py  domains.py  models.py  notifier.py  scoring.py  sources.py  store.py  summarizer.py  web.py
telecom_radar/static/: app.css  app.js
telecom_radar/templates/: index.html
tests/: test_notifier.py  test_scoring.py  test_web.py
tests-js/: github-summary.test.mjs
